objects/LG_License__c.object
<CustomObject>
    <description>Broker License information</description>
    <fields>
        <fullName>ASCS_CO_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ASCS CO ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASCS_External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ASCS External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASCS_Licenses_Key_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ASCS Licenses Key ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Broker Licenses</relationshipLabel>
        <relationshipName>Broker_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Broker Licenses</relationshipLabel>
        <relationshipName>Broker_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EncryptedID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EncryptedID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISGB_Company_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ISGB Company Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISGB_Company_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ISGB Company Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LOB Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>License Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>License End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>License Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Of_Business__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Line Of Business</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Broker License</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broker Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>